need to figure out how circumvent robinhood 2FA but rsi_movingavg is showing trends. sold SOUNAI based on RSI<30

--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,28 @@
 binance_creds:
   api_key: "${binance_key}"
   api_secret: "${binance_secret}"
+
+tickers:
+  - AAPL
+  - AI
+  - AMD
+  - ARTY
+  - BBAI
+  - BOTZ
+  - DIS
+  - JMIA
+  - MDB
+  - MSFT
+  - NEUE
+  - NVDA
+  - PLTR
+  - PLUG
+  - QCOM
+  - RIOT
+  - SOUN
+  - TEAM
+  - TSLA
+  - UBER
+  - VGT
+  - WKHS
+  - IONQ
