moved calculations windows to a separate dict for clean fine tuning. updated gitignore to ignore py cache files restructured code to now analyze robinhood stocks, all AI/TECH stocks and then yahoo finance trending stocks though yfinance trending stocks might be useless as by that point they are overvalued

--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,10 @@ finnhub:
   api_key: "finnhub_api_key" #os environment variable
   base_url: "https://finnhub.io/api/v1"
 
+
+yahoo_finance:
+  trending_url: "https://finance.yahoo.com/trending-tickers"
+
 stock_categories:
   - AI
   - TECH
