restructured folders again

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
-os
-yaml
-structlog
-datetime
-yfinance
-pandas
-numpy
-matplotlib
-smtplib
-email
-requests
-bs4
-json
+PyYAML==6.0
+structlog==23.1.0
+yfinance==0.2.26
+pandas==2.1.1
+numpy==1.25.2
+matplotlib==3.8.0
+requests==2.31.0
+beautifulsoup4==4.12.2
