added environment variable for github actions

--- a/.github/workflows/run-python-script.yml
+++ b/.github/workflows/run-python-script.yml
@@ -25,4 +25,6 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run AutoBot
+      env:
+          finnhub_api_key: ${{ secrets.finnhub_api_key }}
       run: python prime.py
