--- a/.github/workflows/run-python-script.yml
+++ b/.github/workflows/run-python-script.yml
@@ -5,7 +5,8 @@ on:
     branches:
       - main
   workflow_dispatch: # Allows manual trigger from the Actions tab
-
+env:
+    finnhub_api_key: ${{ secrets.finnhub_api_key }}
 jobs:
   run-script:
     runs-on: ubuntu-latest
@@ -17,14 +18,12 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11' # Specify the Python version
+        python-version: '3.11'
 
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run AutoBot
-      env:
-          finnhub_api_key: ${{ secrets.finnhub_api_key }}
-      run: python prime.py
+    - name: Run Robinhood Stocks
+      run: python prime.py --set args_group='Robinhood'
