--- a/.github/workflows/run-autobot-script.yml
+++ b/.github/workflows/run-autobot-script.yml
@@ -5,10 +5,9 @@ on:
     branches:
       - main
   workflow_dispatch: # Allows manual trigger from the Actions tab
-  schedule: # Schedule to run twice a day
-    - cron: "0 8 * * *" # Runs at 12:00 AM UTC
-    - cron: "0 12 * * *" # Runs at 12:00 PM UTC
-
+  schedule:
+    - cron: "0 13 * * *" # Runs at 8:00 AM EST (1:00 PM UTC)
+    - cron: "0 17 * * *" # Runs at 12:00 PM EST (5:00 PM UTC)
 jobs:
   run-script:
     runs-on: ubuntu-latest
