added manual list category to GH Actions job

--- a/.github/workflows/run-autobot-script.yml
+++ b/.github/workflows/run-autobot-script.yml
@@ -31,6 +31,11 @@ jobs:
         finnhub_api_key: ${{ secrets.finnhub_api_key }}
       run: python prime.py --set args_group='Robinhood'
 
+    - name: Run Manual List
+      env:
+        finnhub_api_key: ${{ secrets.finnhub_api_key }}
+      run: python prime.py --set args_group='manual_list'
+
     - name: Run Yahoo Trending Stocks
       env:
         finnhub_api_key: ${{ secrets.finnhub_api_key }}
