--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-PyYAML==6.0
-structlog==23.1.0
-yfinance==0.2.26
-pandas==2.1.1
-numpy==1.25.2
-matplotlib==3.8.0
-requests==2.32.2
-beautifulsoup4==4.12.2
-argparse==1.4.0
+PyYAML>=6.0
+structlog>=23.1.0
+yfinance>=0.2.26
+pandas>=2.1.1
+numpy>=1.25.2
+matplotlib>=3.8.0
+requests>=2.32.2
+beautifulsoup4>=4.12.2
+argparse>=1.4.0
