--- a/.github/workflows/semantic_release.yml
+++ b/.github/workflows/semantic_release.yml
@@ -7,7 +7,7 @@ on:
 
 permissions:
   contents: write
-  issues: write    
+  issues: write
   pull-requests: write
 
 jobs:
@@ -18,15 +18,15 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.0.0
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v4.10.1
         with:
-          node-version: '20' 
+          node-version: '20'
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
 
       - name: Semantic Release
         env:
